--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "formik": "^2.4.5",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
